--- a/styles/payment.css
+++ b/styles/payment.css
@@ -48,6 +48,15 @@ h1, h2, h3, h4, h5, h6, a {
   padding-left:10px;
   font-size:14px;
 }
+.payment-form input[type=number] {
+  height:30px;
+  margin:10px 0;
+  border-radius:5px;
+  border:2px solid #f2f2f2;
+  outline:none;
+  padding-left:10px;
+  font-size:14px;
+}
 .payment-form textarea {
   width: 80%;
   max-width:400px;
